[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blind-75-python"
version = "0.1.0"
description = "Blind 75 practice solutions in Python"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "cd155"}
]
dependencies = [
    "pytest>=7.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
